--- a/app/views/students/show.html.erb
+++ b/app/views/students/show.html.erb
@@ -1,1 +1,11 @@
 <h1><%= @student.to_s %></h1>
+
+<% if @student.active == true%>
+  <p>This student is currently active.</p>
+<% else %>
+  <p>This student is currently inactive.</p>
+<%end%>
+
+<form action="/students/<%=@student.id%>/update" method="POST">
+  <input type="submit" value="change status">
+</form>
